[tool.poetry]
name = "polymonitor"
version = "0.1.0"
description = ""
authors = ["Bee <pizzaman8099@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
argparse = "^1.4.0"
requests = "^2.24.0"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
