[tool.poetry]
name = "polymonitor"
version = "0.1.5"
description = "Polymonitor can be used as a stand alone CLI tool to quickly check the status of a URL or as a plugin for polybar."
authors = ["Bee <bellis8099@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/hegelocampus/polymonitor"
packages = [
    { include = "polymonitor" },
]

[tool.poetry.scripts]
polymonitor = "polymonitor.cli:main"

[tool.poetry.dependencies]
python = "^3.8"
argparse = "^1.4.0"
requests = "^2.24.0"
termcolor = "^1.1.0"
validators = "^0.17.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
